change dockerfile pull image back to latest, add firefox versioning, latest cypress 4.0 now supports cross browser testing

--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -1,4 +1,4 @@
-FROM cypress/browsers:node10.16.0-chrome76
+FROM cypress/browsers:latest
 
 LABEL maintainer="jinjie" \
       description="Image used for running Cypress testing framework"
