add mocha-step library to dockfile

--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -4,12 +4,12 @@ LABEL maintainer="jinjie" \
       description="Image used for running Cypress testing framework"
 
 RUN npm install -g mysql \
-                   mocha mochawesome mochawesome-merge \
+                   mocha mocha-steps mochawesome mochawesome-merge \
                    mochawesome-report-generator \
                    cypress-eslint-preprocessor \
                    cypress-promise \
                    cypress-plugin-retries \
-                   eslint fs-extra prettier
+                   eslint fs-extra prettier \
 
 COPY ./version-info /usr/bin
 
