update dockerfile adding dotenv lodash date-fns removing cypress-plugin-retries

--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -3,20 +3,19 @@ FROM cypress/browsers:node12.14.1-chrome85-ff81
 LABEL maintainer="jinjie" \
       description="Image used for running Cypress testing framework"
 
-RUN npm install -g mysql \
-                   mocha mocha-steps mochawesome mochawesome-merge \
-                   mochawesome-report-generator \
-                   cypress-eslint-preprocessor \
-                   cypress-promise \
-                   cypress-plugin-retries \
-                   cypress-xpath \
-                   eslint faker fs-extra moment prettier
+ENV libList mysql \
+    mocha mocha-steps mochawesome mochawesome-merge \
+    mochawesome-report-generator \
+    cypress-eslint-preprocessor \
+    cypress-promise \
+    cypress-xpath \
+    eslint faker fs-extra moment prettier dotenv \
+    lodash date-fns 
+    
+RUN npm install -g $libList
 
 COPY ./version-info /usr/bin
 
 RUN chmod +x /usr/bin/version-info
 
-RUN npm link mocha mochawesome mochawesome-merge \
-             mochawesome-report-generator \
-             fs-extra \
-             cypress
+RUN npm link $libList
