fixing npm link issue

--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -16,12 +16,4 @@ COPY ./version-info /usr/bin
 
 RUN chmod +x /usr/bin/version-info
 
-RUN npm link mysql \
-             mocha mocha-steps mochawesome mochawesome-merge \
-             mochawesome-report-generator \
-             cypress-eslint-preprocessor \
-             cypress-promise \
-             cypress-xpath \
-             eslint faker fs-extra moment prettier dotenv \
-             lodash date-fns \ 
-             cypress
+RUN npm link $(ls -1 $(npm root -g)/)
