--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,11 @@ stages:
   - lint
   - publish
   - release
+before_install:
+  - sudo add-apt-repository ppa:duggan/bats --yes
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq bats python-pip python-setuptools
+  - sudo pip install awscli
 before_script:
   - docker login -u "${DH_USERNAME}" -p "${DH_PASSWORD}";
   - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
