--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ stages:
 before_install:
   - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
   - unzip awscliv2.zip
-  - ./aws/install
+  - sudo ./aws/install
 before_script:
   - docker login -u "${DH_USERNAME}" -p "${DH_PASSWORD}";
   - /use/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
