--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,40 +14,42 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     name: lint
-    - uses: actions/checkout@v2
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-    - run: docker run --rm -i hadolint/hadolint < ./ansible/Dockerfile
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - run: docker run --rm -i hadolint/hadolint < ./ansible/Dockerfile
   alpine:
     runs-on: ubuntu-latest
     env:
       - IMAGE_NAME: alpine
     name: alpine
-    - uses: actions/checkout@v2
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-    - name: Install dependencies
-      run: |
-      sudo apt-get update
-      sudo apt-get install -yq curl
-    - name: Download and install awscli v2
-      run: |
-      curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-      unzip awscliv2.zip
-      sudo ./aws/install
-    - name: Docker login
-      run: |
-      docker login -u "${{ secrets.DH_USERNAME }}" -p "${{ secrets.DH_PASSWORD }}";
-      /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
-    - name: Build and publish
-      run: |
-      ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" "" "${ECR_REPO}";
-      if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
-        if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
-          ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
-          ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}" --force;
-        else
-          ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
-          ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}";
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Install dependencies
+        run: |
+        sudo apt-get update
+        sudo apt-get install -yq curl
+      - name: Download and install awscli v2
+        run: |
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install
+      - name: Docker login
+        run: |
+        docker login -u "${{ secrets.DH_USERNAME }}" -p "${{ secrets.DH_PASSWORD }}";
+        /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
+      - name: Build and publish
+        run: |
+        ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" "" "${ECR_REPO}";
+        if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then
+          if [ "${TRAVIS_COMMIT_MESSAGE##*'[force build]'*}"  ]; then
+            ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+            ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}" --force;
+          else
+            ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+            ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}";
+          fi;
         fi;
-      fi;
