--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,12 +44,14 @@ jobs:
       - name: ECR public login
         run: /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
       - name: Build and publish
+        if: "!contains(github.event.head_commit.message, '[force build]')"
         run: |
           ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" "" "${ECR_REPO}";
-          if [ "${${{ github.event.head_commit.message }}##*'[force build]'*}"  ]; then
-            ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
-            ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}" --force;
-          else
-            ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
-            ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}";
-          fi;
+          ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
+          ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}";
+      - name: Build and publish force
+        if: "contains(github.event.head_commit.message, '[force build]')"
+        run: |
+          ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" "" "${ECR_REPO}";
+          ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
+          ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}" --force;
