--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,8 @@ on:
 env:
   ECR_REPO: public.ecr.aws/l5k6t5t7/cicd-images
   DH_REPO: govtechsg/cicd-images
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
 
 jobs:
   lint:
@@ -23,8 +25,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       IMAGE_NAME: alpine
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
     name: alpine
     steps:
       - uses: actions/checkout@v2
@@ -43,15 +43,30 @@ jobs:
         run: docker login -u ${{ secrets.DH_USERNAME }} -p ${{ secrets.DH_PASSWORD }};
       - name: ECR public login
         run: /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
-      - name: Build and publish
-        if: "!contains(github.event.head_commit.message, '[force build]')"
+      - name: Build and Publish
+        uses: ./.github/actions/build-and-publish
+
+  ansible:
+    env:
+      IMAGE_NAME: ansible
+    runs-on: ubuntu-latest
+    name: ansible
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Install dependencies
         run: |
-          ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" "" "${ECR_REPO}";
-          ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
-          ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}";
-      - name: Build and publish force
-        if: "contains(github.event.head_commit.message, '[force build]')"
+          sudo apt-get update
+          sudo apt-get install -yq curl
+      - name: Download and install awscli v2
         run: |
-          ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" "" "${ECR_REPO}";
-          ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
-          ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}" --force;
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+      - name: Dockerhub login
+        run: docker login -u ${{ secrets.DH_USERNAME }} -p ${{ secrets.DH_PASSWORD }};
+      - name: ECR public login
+        run: /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
+      - name: Build and Publish
+        uses: ./.github/actions/build-and-publish
