--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,7 @@ jobs:
       IMAGE_NAME: alpine
     name: alpine
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Install dependencies
@@ -44,7 +44,7 @@ jobs:
       - name: ECR public login
         run: /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
       - name: Build and Publish
-        uses: govtechsg/cicd-images/.github/actions/build-and-publish@master
+        uses: ./.github/actions/build-and-publish
 
   ansible:
     env:
@@ -52,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     name: ansible
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Install dependencies
@@ -69,4 +69,4 @@ jobs:
       - name: ECR public login
         run: /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
       - name: Build and Publish
-        uses: govtechsg/cicd-images/.github/actions/build-and-publish@master
+        uses: ./.github/actions/build-and-publish
