--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,6 +45,7 @@ jobs:
         run: /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
       - name: Build and Publish
         uses: ./.github/actions/build-and-publish
+        uses: govtechsg/cicd-images/.github/actions/build-and-publish@master
 
   ansible:
     env:
@@ -69,4 +70,8 @@ jobs:
       - name: ECR public login
         run: /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
       - name: Build and Publish
+        if: "!contains(github.event.head_commit.message, '[force build]')"
         uses: ./.github/actions/build-and-publish
+      - name: Build and Publish (force)
+        if: "contains(github.event.head_commit.message, '[force build]')"
+        uses: ./.github/actions/build-and-publish-force
