--- a/.github/actions/build-and-publish/action.yaml
+++ b/.github/actions/build-and-publish/action.yaml
@@ -1,11 +1,16 @@
 name: 'build and publish'
 description: 'Builds and Publish the docker image'
+inputs:
+  BUILD_ARGS:  # id of input
+    description: 'Docker build arguments'
+    required: false
+    default: ''
 runs:
   using: "composite"
   steps:
     - name: Build and publish
       run: |
-        ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" "" "${ECR_REPO}";
+        ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" ${{ inputs.BUILD_ARGS }} "${ECR_REPO}";
         ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}";
         ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}";
       shell: bash
