--- a/.github/actions/build-and-publish-force/action.yaml
+++ b/.github/actions/build-and-publish-force/action.yaml
@@ -4,13 +4,13 @@ inputs:
   BUILD_ARGS:  # id of input
     description: 'Docker build arguments'
     required: false
-    default: ''
+    default: ""
 runs:
   using: "composite"
   steps:
     - name: Build and publish force
       run: |
-        ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" ${{ inputs.BUILD_ARGS }} "${ECR_REPO}";
+        ./.scripts/.build.sh "${DH_REPO}" "${IMAGE_NAME}" "${{ inputs.BUILD_ARGS }}" "${ECR_REPO}";
         ./${IMAGE_NAME}/.publish.sh "${DH_REPO}:${IMAGE_NAME}" --force;
         ./${IMAGE_NAME}/.publish.sh "${ECR_REPO}:${IMAGE_NAME}" --force;
       shell: bash
