--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -247,7 +247,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [8, 10, 12, 14, 15]
     name: node
     steps:
       - uses: actions/checkout@v1
