Added matrix for chrome-oracle-py

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -92,6 +92,17 @@ jobs:
       IMAGE_NAME: chrome-oracle-py
     runs-on: ubuntu-latest
     name: chrome-oracle-py
+    strategy:
+      matrix:
+        include:
+          - python_version: 3.7
+            oracle_version: 12.2.0.1.0
+
+          - python_version: 3.6
+            oracle_version: 12.2.0.1.0
+
+          - python_version: 2.7
+            oracle_version: 12.2.0.1.0
     steps:
       - uses: actions/checkout@v1
       - name: Set up Docker Buildx
@@ -104,9 +115,13 @@ jobs:
         run: /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
       - name: Build and Publish
         if: "!contains(github.event.head_commit.message, '[force build]')"
+        with:
+          docker_build_args: PYTHON_VERSION=${{ matrix.python_version }} ORACLE_VERSION=${{ matrix.oracle_version }}
         uses: ./.github/actions/build-and-publish
       - name: Build and Publish (force)
         if: "contains(github.event.head_commit.message, '[force build]')"
+        with:
+          docker_build_args: PYTHON_VERSION=${{ matrix.python_version }} ORACLE_VERSION=${{ matrix.oracle_version }}
         uses: ./.github/actions/build-and-publish-force
 
   cypress:
