--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -116,12 +116,12 @@ jobs:
       - name: Build and Publish
         if: "!contains(github.event.head_commit.message, '[force build]')"
         with:
-          docker_build_args: PYTHON_VERSION=${{ matrix.python_version }} ORACLE_VERSION=${{ matrix.oracle_version }}
+          docker_build_args: PYTHON_VERSION=${{ matrix.python_version }},ORACLE_VERSION=${{ matrix.oracle_version }}
         uses: ./.github/actions/build-and-publish
       - name: Build and Publish (force)
         if: "contains(github.event.head_commit.message, '[force build]')"
         with:
-          docker_build_args: PYTHON_VERSION=${{ matrix.python_version }} ORACLE_VERSION=${{ matrix.oracle_version }}
+          docker_build_args: PYTHON_VERSION=${{ matrix.python_version }},ORACLE_VERSION=${{ matrix.oracle_version }}
         uses: ./.github/actions/build-and-publish-force
 
   cypress:
