--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,6 +5,8 @@ name: build and publish
 on:
   push:
     branches: [ master ]
+  schedule:
+    - cron:  '15 0 * * *'
 
 env:
   ECR_REPO: public.ecr.aws/l5k6t5t7/cicd-images
