--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -287,6 +287,28 @@ jobs:
           docker_build_args: NODE_MAJOR_VERSION=${{ matrix.node-version }}
         uses: ./.github/actions/build-and-publish-force
 
+  pact-provider-verifier:
+    env:
+      IMAGE_NAME: pact-provider-verifier
+    runs-on: ubuntu-latest
+    name: pact-provider-verifier
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Install dependencies
+        uses: ./.github/actions/install-dep
+      - name: Dockerhub login
+        run: docker login -u ${{ secrets.DH_USERNAME }} -p ${{ secrets.DH_PASSWORD }};
+      - name: ECR public login
+        run: /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
+      - name: Build and Publish
+        if: "!contains(github.event.head_commit.message, '[force build]')"
+        uses: ./.github/actions/build-and-publish
+      - name: Build and Publish (force)
+        if: "contains(github.event.head_commit.message, '[force build]')"
+        uses: ./.github/actions/build-and-publish-force
+
   pivotaltracker-commit:
     env:
       IMAGE_NAME: pivotaltracker-commit
