Update Alpine version and remove hardcoded software versions

--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -1,20 +1,8 @@
-ARG alpine_ver=3.12.1
+ARG alpine_ver=3.13.1
 FROM alpine:${alpine_ver}
 LABEL maintainer="salihan" \
       description="Image containing Ansible and Ansible-lint for use in CI/CD pipelines"
 
-ARG python=3.8.5-r0
-ARG openssh_client=8.3_p1-r1
-ARG sudo=1.9.0-r0
-ARG curl=7.69.1-r3
-ARG gcc=9.3.0-r2
-ARG zip=3.0-r8
-ARG bash=5.0.17-r0
-ARG ansible=2.9.14-r0
-ARG pip_ver=19.3.1
-ARG ansible_lint=4.2.0
-ARG boto3_ver=1.11.5
-ARG boto2_ver=2.49.0
 ARG user=cicd
 ARG group=cicd
 
@@ -22,38 +10,26 @@ COPY ./version-info /usr/bin
 
 ENV USERID="1101" \
   GROUPID="1101" \
-  PYTHON=${python} \
-  OPENSSH_CLIENT=${openssh_client} \
-  SUDO=${sudo} \
-  CURL=${curl} \
-  GCC=${gcc} \
-  ZIP=${zip} \
-  BASH=${bash} \
-  ANSIBLE=${ansible} \
-  PIP=${pip_ver} \
-  ANSIBLE_LINT=${ansible_lint} \
-  BOTO3=${boto3_ver} \
-  BOTO2=${boto2_ver} \
   USER=${user} \
   GROUP=${group}
 
 RUN addgroup -S ${GROUP} -g ${GROUPID} \
   && adduser -D -S ${USER} -u ${USERID} -G ${GROUP} \
   && apk update \
-  && apk add --no-cache python3=${PYTHON} \
-    openssh-client=${OPENSSH_CLIENT} \
-    sudo=${SUDO} \
-    curl=${CURL} \
-    gcc=${GCC} \
-    zip=${ZIP} \
-    bash=${BASH} \
-    ansible=${ANSIBLE} \
+  && apk add --no-cache python3 \
+    openssh-client \
+    sudo \
+    curl \
+    gcc \
+    zip \
+    bash \
+    ansible \
   && python3 -m ensurepip \
   && rm -r /usr/lib/python*/ensurepip \
-  && pip3 install --no-cache-dir --upgrade pip==${PIP} \
-  && pip3 install --no-cache-dir ansible-lint==${ANSIBLE_LINT} \
-  && pip3 install --no-cache-dir boto3==${BOTO3} \
-  && pip3 install --no-cache-dir boto==${BOTO2} \
+  && pip3 install --upgrade pip \
+  && pip3 install ansible-lint \
+  && pip3 install boto3 \
+  && pip3 install boto \
   && ln -s /usr/bin/python3 /usr/bin/python \
   && rm -rf /usr/share/man/* \
     /usr/includes/* \
