--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,7 @@ on:
     branches: [ master ]
   schedule:
     - cron:  '15 0 * * *'
+  workflow_dispatch:
 
 env:
   ECR_REPO: public.ecr.aws/l5k6t5t7/cicd-images
