add py3-pip to installation steps

--- a/trinity/Dockerfile
+++ b/trinity/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.15
 LABEL maintainer="gyl <gylswork-at-gmail-com" \
       description="Amazon Web Services CLI image for use in CI pipelines"
-ENV APK_DEPENDENCIES="bash curl git jq vim python3 make g++ docker" \
+ENV APK_DEPENDENCIES="bash curl git jq vim python3 make g++ docker py3-pip" \
     PIP_DEPENDENCIES="awscli" \
     PATHS_TO_REMOVE="\
       /usr/include/* \
@@ -11,7 +11,6 @@ ENV APK_DEPENDENCIES="bash curl git jq vim python3 make g++ docker" \
       /var/cache/misc/*"
 COPY ./version-info /usr/bin/
 RUN apk add --update --upgrade --no-cache ${APK_DEPENDENCIES} \
-    && pip3 install --upgrade pip \
     && pip3 --no-cache-dir install ${PIP_DEPENDENCIES} \
     && rm -rf ${PATHS_TO_REMOVE} \
     && curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl \
