deprecate old versions and add new versions for nodejs and golang versions

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -245,7 +245,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.14, 1.15]
+        go-version: [1.15, 1.16, 1.17, 1.18]
     name: go-pact
     steps:
       - uses: actions/checkout@v1
@@ -312,7 +312,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10, 12, 14, lts]
+        node-version: [14, 16, 18, lts]
     name: node
     steps:
       - uses: actions/checkout@v1
