updates(cypress): add sample tests and makefile steps for test

--- a/cypress/Makefile
+++ b/cypress/Makefile
@@ -1,13 +1,20 @@
+NAME=cypress
+NAME_LOCAL=cypress-local
+NAME_TEST=cypress-test
+TAG_LOCAL=cypress:local
 TEST_PATH=$$(pwd)/test
 
 build:
-	@docker build -t cypress:local .
+	@docker build -t ${NAME}:local .
 
 up: build
-	@docker run -dt --rm --name cypress-local -v ${TEST_PATH}:/app/test --entrypoint tail cypress:local -f /dev/null
+	@docker run -dt --rm --name ${NAME_LOCAL} -v ${TEST_PATH}:/app/test --entrypoint tail ${TAG_LOCAL} -f /dev/null
 
 down:
-	@docker stop cypress-local
+	@docker stop ${NAME_LOCAL}
+
+test: build
+	@docker run -t --name ${NAME_TEST} -v ${TEST_PATH}:/app/test --entrypoint /bin/bash ${TAG_LOCAL} -c "cd /app/test && ./init.sh"
 
 conn:
-	@docker exec -it cypress-local /bin/bash
+	@docker exec -it ${NAME_LOCAL} /bin/bash
