--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -360,6 +360,33 @@ jobs:
         if: "contains(github.event.head_commit.message, '[force build]')"
         uses: ./.github/actions/build-and-publish-force
 
+  playwright:
+    env:
+      IMAGE_NAME: playwright
+    runs-on: ubuntu-latest
+    name: playwright
+    strategy:
+      matrix:
+        node-version: [ 14.19.0, 16.14.2 ]
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Dockerhub login
+        run: docker login -u ${{ secrets.DH_USERNAME }} -p ${{ secrets.DH_PASSWORD }};
+      - name: ECR public login
+        run: /usr/local/bin/aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
+      - name: Build and Publish
+        if: "!contains(github.event.head_commit.message, '[force build]')"
+        with:
+          docker_build_args: NODE_VERSION=${{ matrix.node-version }}
+        uses: ./.github/actions/build-and-publish
+      - name: Build and Publish (force)
+        if: "contains(github.event.head_commit.message, '[force build]')"
+        with:
+          docker_build_args: NODE_VERSION=${{ matrix.node-version }}
+        uses: ./.github/actions/build-and-publish-force
+
   sqlplus:
     env:
       IMAGE_NAME: sqlplus
